@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+06-Aug-2010 Jean-Marie Simonet
+ # [#21740] Media Manager Submenu not indicating active option. Thanks Andrea.
+
 05-Aug-2010 Jean-Marie Simonet
  # [#21599] Featured articles - article link to parent category - 500 error. Thanks Mathavan
  # [#21433] Title disappear when you select the menu item type. Thanks Bill
